frontend/src/component/Product/Products.css
.productsContainer {
  display: flex;
  flex-direction: row;
}

.productsHeading {
  border-bottom: 1px solid rgba(0, 0, 0, 0.171);
  color: rgba(0, 0, 0, 0.678);
  text-align: left;
  width: 100%;
  margin: 2vmax 0;
  padding-bottom: 0.5vmax;
  font-family: 'Inter', Arial, Helvetica, sans-serif;
}

.productsPaginationWrap {
  width: 100%;
  box-sizing: border-box;
  padding: 3rem 1.5rem;
}

.products {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.productsList {
  display: grid;
  box-sizing: border-box;
  justify-content: start;
  align-items: start;
  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
  gap: 1rem;
}

.noProductsFound {
  grid-column: 1/ -1;
  text-align: center;
  font-family: 'Robodo', Arial, Helvetica, sans-serif;
  font-size: large;
}

.paginationBox {
  display: flex;
  justify-content: center;
  margin: 40px 0;
  font-family: 'Robodo', Arial, Helvetica, sans-serif;
}

.pagination {
  display: flex;
  justify-content: center;
  padding: 0;
}

.page-item {
  background-color: rgb(255, 255, 255);
  list-style: none;
  border: 1px solid rgba(0, 0, 0, 0.178);
  padding: 1vmax 1.5vmax;
  transition: all 0.3s;
  cursor: pointer;
}
.page-item:first-child {
  border-radius: 5px 0 0 5px;
}

.page-item:last-child {
  border-radius: 0 5px 5px 0;
}
.page-link {
  text-decoration: none;
  color: rgb(80, 80, 80);
  transition: all 0.3s;
}

.page-item:hover {
  background-color: rgb(230, 230, 230);
}

.page-item:hover .page-link {
  color: rgb(0, 0, 0);
}

.pageItemActive {
  background-color: tomato;
}

.pageLinkActive {
  color: white;
}

.filterBox {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  box-shadow: -5px 4px 15px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
}

.M-Filter-Button {
  display: none;
}

.price {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 30px;
  gap: 5px;
}

.category {
  padding: 20px 30px 0 30px;
  border-top: 1px solid grey;
}

.categoryBox {
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
  padding: 10px 10px 30px 10px;
}

.category-link {
  list-style: none;
  color: rgba(0, 0, 0, 0.61);
  margin: 0.4vmax;
  cursor: pointer;
  transition: all 0.5s;
}

.ratings {
  border: 1px solid rgba(0, 0, 0, 0.329);
  margin: 10px;
}

@media screen and (max-width: 750px) {

  .M-Filter-Button {
    display: inline-block;
  }

  .M-Filter-Button > button {
    border: 1px solid grey;
    background: none;
    padding: 0.5rem 1.2rem;
    border-radius: 10px;
    margin: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;
  }

  .filterButton {
    border-bottom: 1px solid black;
    border-right: 1px solid black;
    height: 5px;
    width: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .filterButton.visible {
    transform: rotate(225deg) translateY(0);
  }

  .filterButton.hidden {
    transform: rotate(45deg) translateY(-20%) translateX(-20%);
  }

  .filterBox.visible {
    visibility: visible;
    opacity: 1;
  }

  .filterBox.hidden {
    visibility: hidden;
    opacity: 0;
    display: none;
  }

  .productsContainer {
    flex-direction: column;
  }

  .price {
    padding: 0;
  }

  .category {
    padding: 0.7rem;
  }

  .categoryBox {
    padding: 10px;
  }

  .category-link {
    margin: 0.8rem;
    display: inline-block;
    border: 1px solid grey;
    padding: 0.5rem 1rem;
    border-radius: 1rem;
  }

  .productsList {
    margin-top: 2rem;
  }
}

